src/Common/Component/Layout/Footer/index.scss
.Footer {
  border: none;
  background-color: #151515;
  display: flex;
  justify-content: center;
  z-index: 5;
  .Footer--Inner {
    position: relative;
    width: 100%;
    max-width: 1169px;
    height: 80px;
    display: flex;
    align-items: center;
    color: #808080;
  }
  .Logo {
    position: absolute;
    right: 0;
    width: 98px;
    height: 15px;
    display: flex;
  }
  .Terms {
    font-size: 13px;
    font-weight: bold;
  }
  .Privacy {
    padding: 0;
    font-size: 13px;
    font-weight: bold;
  }
  .Agreement {
    cursor: pointer;
    position: relative;
    color: inherit;
    font-size: 13px;
    font-weight: bold;
    color: rgba(255, 255, 255, 0.5);
    text-decoration: none;
    margin-right: 24px;

    &::after {
      content: '';
      position: absolute;
      top: 55%;
      right: -12px;
      transform: translateY(-50%);
      width: 1px;
      height: 12px;
      background: #808080;
    }
  }

  .Info--Copy, .Info--Call, .Info--Service-time, .Info-email {
    font-size: 13px;
    margin-right: 20px;
  }

  .Logo {
    display: none;
  }
  

  @media screen and (max-width: 1169px) {
    display: block;
    .Footer--Inner {
      display: block;
      width: initial;
      height: auto;
      padding: 30px 21px;
    }
    .Terms, .Privacy {
      display: inline-block;
    }
    .Privacy a:after{
      display: none;
    }
    .Info--Copy {
      margin: 10px 0;
    }
    .Info--Service-time {
      white-space: pre-wrap;
      margin: 10px 0 20px;
    }
    .Logo {
      position: static;
      margin-top: 20px;
    }
  }
}

